// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button image 1`] = `
<button
  className="button-image button--primary"
  onClick={[Function]}
  type="button"
>
  <img
    alt="button logo"
    src="cancel.svg"
  />
</button>
`;

exports[`Storyshots Button image-circle 1`] = `
<button
  className="button-image button-image--circle button--primary"
  onClick={[Function]}
  type="button"
>
  <img
    alt="button logo"
    src="cancel.svg"
  />
</button>
`;

exports[`Storyshots Button text 1`] = `
<button
  className="button button--primary"
  onClick={[Function]}
  type="button"
>
  Manage Currencies
</button>
`;

exports[`Storyshots Card long 1`] = `
<li
  className="card"
>
  <div
    className="card__header"
  >
    <p
      className="medium"
    >
      KM
    </p>
    <p
      className="large"
    >
      BAM
    </p>
  </div>
  <p
    className="medium"
  >
    Bosnia-Herzegovina Convertible Mark
  </p>
  <p
    className="large"
  >
    1 NGN - 1587 BAM
  </p>
</li>
`;
